mail/msgset.output
Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | '.'
    3      | msgset
    4      | '^'
    5      | '$'
    6      | '*'
    7      | '-'
    8      | '+'

    9 msgset: msgexpr
   10       | msgset ',' msgexpr
   11       | msgset msgexpr

   12 msgexpr: msgspec
   13        | '{' msgset '}'
   14        | '!' msgexpr

   15 msgspec: msg
   16        | msg '[' rangeset ']'
   17        | range

   18 msg: header REGEXP
   19    | BODY
   20    | TYPE
   21    | IDENT

   22 header: /* empty */
   23       | HEADER

   24 rangeset: range
   25         | rangeset ',' range
   26         | rangeset range

   27 range: number
   28      | NUMBER '-' number
   29      | NUMBER '-' '*'

   30 number: partno
   31       | partno '[' rangeset ']'

   32 partno: NUMBER
   33       | '(' rangeset ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 14
'$' (36) 5
'(' (40) 33
')' (41) 33
'*' (42) 6 29
'+' (43) 8
',' (44) 10 25
'-' (45) 7 28 29
'.' (46) 2
'[' (91) 16 31
']' (93) 16 31
'^' (94) 4
'{' (123) 13
'}' (125) 13
error (256)
TYPE (258) 20
IDENT (259) 21
REGEXP (260) 18
HEADER (261) 23
BODY (262) 19
NUMBER (263) 28 29 32


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
input (24)
    on left: 1 2 3 4 5 6 7 8, on right: 0
msgset (25)
    on left: 9 10 11, on right: 3 10 11 13
msgexpr (26)
    on left: 12 13 14, on right: 9 10 11 14
msgspec (27)
    on left: 15 16 17, on right: 12
msg (28)
    on left: 18 19 20 21, on right: 15 16
header (29)
    on left: 22 23, on right: 18
rangeset (30)
    on left: 24 25 26, on right: 16 25 26 31 33
range (31)
    on left: 27 28 29, on right: 17 24 25 26
number (32)
    on left: 30 31, on right: 27 28
partno (33)
    on left: 32 33, on right: 30 31


State 0

    0 $accept: . input $end

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '.'     shift, and go to state 6
    '^'     shift, and go to state 7
    '$'     shift, and go to state 8
    '*'     shift, and go to state 9
    '-'     shift, and go to state 10
    '+'     shift, and go to state 11
    '{'     shift, and go to state 12
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    REGEXP    reduce using rule 22 (header)
    $default  reduce using rule 1 (input)

    input    go to state 15
    msgset   go to state 16
    msgexpr  go to state 17
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 1

   20 msg: TYPE .

    $default  reduce using rule 20 (msg)


State 2

   21 msg: IDENT .

    $default  reduce using rule 21 (msg)


State 3

   23 header: HEADER .

    $default  reduce using rule 23 (header)


State 4

   19 msg: BODY .

    $default  reduce using rule 19 (msg)


State 5

   28 range: NUMBER . '-' number
   29      | NUMBER . '-' '*'
   32 partno: NUMBER .

    '-'  shift, and go to state 24

    $default  reduce using rule 32 (partno)


State 6

    2 input: '.' .

    $default  reduce using rule 2 (input)


State 7

    4 input: '^' .

    $default  reduce using rule 4 (input)


State 8

    5 input: '$' .

    $default  reduce using rule 5 (input)


State 9

    6 input: '*' .

    $default  reduce using rule 6 (input)


State 10

    7 input: '-' .

    $default  reduce using rule 7 (input)


State 11

    8 input: '+' .

    $default  reduce using rule 8 (input)


State 12

   13 msgexpr: '{' . msgset '}'

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '{'     shift, and go to state 12
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 22 (header)

    msgset   go to state 25
    msgexpr  go to state 17
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 13

   14 msgexpr: '!' . msgexpr

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '{'     shift, and go to state 12
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 22 (header)

    msgexpr  go to state 26
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 14

   33 partno: '(' . rangeset ')'

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 14

    rangeset  go to state 27
    range     go to state 28
    number    go to state 22
    partno    go to state 23


State 15

    0 $accept: input . $end

    $end  shift, and go to state 29


State 16

    3 input: msgset .
   10 msgset: msgset . ',' msgexpr
   11       | msgset . msgexpr

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    ','     shift, and go to state 30
    '{'     shift, and go to state 12
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    REGEXP    reduce using rule 22 (header)
    $default  reduce using rule 3 (input)

    msgexpr  go to state 31
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 17

    9 msgset: msgexpr .

    $default  reduce using rule 9 (msgset)


State 18

   12 msgexpr: msgspec .

    $default  reduce using rule 12 (msgexpr)


State 19

   15 msgspec: msg .
   16        | msg . '[' rangeset ']'

    '['  shift, and go to state 32

    $default  reduce using rule 15 (msgspec)


State 20

   18 msg: header . REGEXP

    REGEXP  shift, and go to state 33


State 21

   17 msgspec: range .

    $default  reduce using rule 17 (msgspec)


State 22

   27 range: number .

    $default  reduce using rule 27 (range)


State 23

   30 number: partno .
   31       | partno . '[' rangeset ']'

    '['  shift, and go to state 34

    $default  reduce using rule 30 (number)


State 24

   28 range: NUMBER '-' . number
   29      | NUMBER '-' . '*'

    NUMBER  shift, and go to state 35
    '*'     shift, and go to state 36
    '('     shift, and go to state 14

    number  go to state 37
    partno  go to state 23


State 25

   10 msgset: msgset . ',' msgexpr
   11       | msgset . msgexpr
   13 msgexpr: '{' msgset . '}'

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    ','     shift, and go to state 30
    '{'     shift, and go to state 12
    '}'     shift, and go to state 38
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 22 (header)

    msgexpr  go to state 31
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 26

   14 msgexpr: '!' msgexpr .

    $default  reduce using rule 14 (msgexpr)


State 27

   25 rangeset: rangeset . ',' range
   26         | rangeset . range
   33 partno: '(' rangeset . ')'

    NUMBER  shift, and go to state 5
    ','     shift, and go to state 39
    '('     shift, and go to state 14
    ')'     shift, and go to state 40

    range   go to state 41
    number  go to state 22
    partno  go to state 23


State 28

   24 rangeset: range .

    $default  reduce using rule 24 (rangeset)


State 29

    0 $accept: input $end .

    $default  accept


State 30

   10 msgset: msgset ',' . msgexpr

    TYPE    shift, and go to state 1
    IDENT   shift, and go to state 2
    HEADER  shift, and go to state 3
    BODY    shift, and go to state 4
    NUMBER  shift, and go to state 5
    '{'     shift, and go to state 12
    '!'     shift, and go to state 13
    '('     shift, and go to state 14

    $default  reduce using rule 22 (header)

    msgexpr  go to state 42
    msgspec  go to state 18
    msg      go to state 19
    header   go to state 20
    range    go to state 21
    number   go to state 22
    partno   go to state 23


State 31

   11 msgset: msgset msgexpr .

    $default  reduce using rule 11 (msgset)


State 32

   16 msgspec: msg '[' . rangeset ']'

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 14

    rangeset  go to state 43
    range     go to state 28
    number    go to state 22
    partno    go to state 23


State 33

   18 msg: header REGEXP .

    $default  reduce using rule 18 (msg)


State 34

   31 number: partno '[' . rangeset ']'

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 14

    rangeset  go to state 44
    range     go to state 28
    number    go to state 22
    partno    go to state 23


State 35

   32 partno: NUMBER .

    $default  reduce using rule 32 (partno)


State 36

   29 range: NUMBER '-' '*' .

    $default  reduce using rule 29 (range)


State 37

   28 range: NUMBER '-' number .

    $default  reduce using rule 28 (range)


State 38

   13 msgexpr: '{' msgset '}' .

    $default  reduce using rule 13 (msgexpr)


State 39

   25 rangeset: rangeset ',' . range

    NUMBER  shift, and go to state 5
    '('     shift, and go to state 14

    range   go to state 45
    number  go to state 22
    partno  go to state 23


State 40

   33 partno: '(' rangeset ')' .

    $default  reduce using rule 33 (partno)


State 41

   26 rangeset: rangeset range .

    $default  reduce using rule 26 (rangeset)


State 42

   10 msgset: msgset ',' msgexpr .

    $default  reduce using rule 10 (msgset)


State 43

   16 msgspec: msg '[' rangeset . ']'
   25 rangeset: rangeset . ',' range
   26         | rangeset . range

    NUMBER  shift, and go to state 5
    ','     shift, and go to state 39
    ']'     shift, and go to state 46
    '('     shift, and go to state 14

    range   go to state 41
    number  go to state 22
    partno  go to state 23


State 44

   25 rangeset: rangeset . ',' range
   26         | rangeset . range
   31 number: partno '[' rangeset . ']'

    NUMBER  shift, and go to state 5
    ','     shift, and go to state 39
    ']'     shift, and go to state 47
    '('     shift, and go to state 14

    range   go to state 41
    number  go to state 22
    partno  go to state 23


State 45

   25 rangeset: rangeset ',' range .

    $default  reduce using rule 25 (rangeset)


State 46

   16 msgspec: msg '[' rangeset ']' .

    $default  reduce using rule 16 (msgspec)


State 47

   31 number: partno '[' rangeset ']' .

    $default  reduce using rule 31 (number)
